Rectified issues in Backend Connection and version Control